sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: Unit does not take parameters
			echange(i,i+1){
                                      ^