sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	for(i <- getNombreValeurs()-2 to 0 by -1){
		if(plusPetit(i, i+1)){
			echange(i,i+1){
			
			
		}
	}
}
}